[gd_scene load_steps=5 format=3 uid="uid://bjtj0eng0ag43"]

[ext_resource type="Script" path="res://widgets/calendar/date_label.gd" id="1_n7h8x"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2fdj4"]
bg_color = Color(0.130798, 0.378899, 0.74007, 1)
corner_radius_top_left = 50
corner_radius_top_right = 50
corner_radius_bottom_right = 50
corner_radius_bottom_left = 50

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_04bnq"]
bg_color = Color(0, 0.502, 0, 1)
corner_radius_top_left = 30
corner_radius_top_right = 30
corner_radius_bottom_right = 30
corner_radius_bottom_left = 30

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_fi301"]

[node name="MarginContainer" type="MarginContainer"]
custom_minimum_size = Vector2(80, 50)
offset_right = 25.0
offset_bottom = 43.0
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 5
script = ExtResource("1_n7h8x")

[node name="Panel" type="Panel" parent="."]
unique_name_in_owner = true
layout_mode = 2
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_2fdj4")

[node name="MarginContainer" type="MarginContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 10

[node name="WorkoutIndicator" type="PanelContainer" parent="Panel/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_04bnq")

[node name="DateLabel" type="Label" parent="Panel/MarginContainer/WorkoutIndicator"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 1
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "66"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Button" type="Button" parent="."]
layout_mode = 2
theme_override_styles/focus = SubResource("StyleBoxEmpty_fi301")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxEmpty_fi301")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_fi301")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxEmpty_fi301")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_fi301")
theme_override_styles/hover_mirrored = SubResource("StyleBoxEmpty_fi301")
theme_override_styles/hover = SubResource("StyleBoxEmpty_fi301")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxEmpty_fi301")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_fi301")
theme_override_styles/normal_mirrored = SubResource("StyleBoxEmpty_fi301")
theme_override_styles/normal = SubResource("StyleBoxEmpty_fi301")

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
